--- a/views/partials/join.ejs
+++ b/views/partials/join.ejs
@@ -7,16 +7,21 @@
     <p>Enter your name and click the Join Room button to begin the estimation session</p>
     <div>
     <label for="join-name">Name:
-        <input type="text" id="join-name" placeholder="John Smith" value="<%= displayName %>">
+        <input type="text" id="join-name" placeholder="John Smith">
     </label>
     </div>
     <button id="join-button" class="btn btn-secondary btn-lg mt-4">Join Room</button>
 </section>
 
 <script>
+  const joinAsName = localStorage.getItem('join-as_name') || "<%= displayName %>";
+  console.log(joinAsName);
+  document.getElementById("join-name").value = joinAsName;
+
   document.getElementById("join-button").addEventListener("click", () => {
     const name = document.getElementById("join-name").value;
     if (name) {
+      localStorage.setItem("join-as_name", name);
       console.log(`${name} is joining room <%= roomCode %>`);
       joinRoom(name);
     }
