--- a/views/room/index.ejs
+++ b/views/room/index.ejs
@@ -1,6 +1,7 @@
 <%- messages() %>
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/script.js"></script>
 
 <script>
   let socket;
