--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,14 @@
 <header class="bg-wite py-3 border-bottom shadow-sm">
-    <div class="container d-flex justify-content-between align-items-center">
+    <div class="container d-flex justify-content-between align-items-center header-container">
         <a href="/" title="Return to home page">
             <img src="/images/site/logo.png" alt="Your Point Is Logo" class="img-fluid" style="max-height: 80px;">
         </a>
         <% if (loggedIn) { %>
-        <div>
-            <span class="m-2">Welcome <%= loggedIn.displayName %></span>
+        <div class="d-flex align-items-center logged-in-header">
+            <span class="m-2 ms-4">Welcome <%= loggedIn.displayName %></span>
             <span class="header-items">
-                <a class="btn btn-outline-primary ms-2" href="/dashboard/">Dashboard</a>
-                <a class="btn btn-outline-danger ms-2" title="Click to log out" href="/auth/logout">Logout</a>
+                <a class="btn btn-outline-primary ms-2 mb-1" href="/dashboard/">Dashboard</a>
+                <a class="btn btn-outline-danger ms-2 mb-1" title="Click to log out" href="/auth/logout">Logout</a>
             </span>
         <% } else { %>
             <a class="btn btn-outline-primary" title="Click to log in" href="/auth/login">Login</a>
