--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -25,7 +25,7 @@
             const div = document.createElement('div');
             const date = new Date(room.date);
             const button = document.createElement('button');
-            button.className = 'btn btn-outline-danger btn-sm';
+            button.className = 'btn btn-outline-danger btn-sm ms-3';
             button.title = 'Click to delete this room';
             button.textContent = '🗑️';
             button.addEventListener('click', async (e) => {
@@ -45,13 +45,14 @@
             div.textContent = `Created: ${date.toLocaleString()}`;
             div.className = 'roomDate text-muted me-1';
 
+            div.appendChild(button);
+
             const roomLink = document.createElement('a');
             roomLink.href = `/room/${room.roomCode}`;
             roomLink.className = 'room-link text-decoration-none list-group-item list-group-item-action w-100 d-flex justify-content-between align-items-center me-1';
             roomLink.textContent = `Room Code: ${room.roomCode}`;
 
             roomLink.appendChild(div);
-            roomLink.appendChild(button);
             roomsUl.appendChild(roomLink);
           
           });
