--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -1,8 +1,19 @@
 <section id="waiting-section" class="hidden">
   <h3>Invite participants to the room with the link below</h3>
   <div class="container d-flex justify-content-center align-items-center mb-4">
-    <input class="form-control me-2" id="linkToShare" value="<%= location%>" readonly />
-    <button class="btn btn-outline-primary" id="buttonToCopy" onclick="copyText()">📋 Copy</button>
+    <input
+      class="form-control me-2"
+      id="linkToShare"
+      value="<%= location%>"
+      readonly
+    />
+    <button
+      class="btn btn-outline-primary"
+      id="buttonToCopy"
+      onclick="copyText()"
+    >
+      📋 Copy
+    </button>
   </div>
   <div id="imagepizzawrapper">
     <img
@@ -25,13 +36,16 @@
 </section>
 
 <script>
+  //function to hide waiting view from user
   function hideWaiting() {
     document.getElementById('waiting-section').classList.add('hidden');
   }
+  //function to display waiting view from user
   function showWaiting() {
     document.getElementById('waiting-section').classList.remove('hidden');
   }
 
+  //function to start new round by sending a message to the server via socket.io
   function newRound() {
     hideWaiting();
     getSocket().emit('new_round', roomCode);
@@ -44,6 +58,8 @@
       buttonToCopy.innerHTML = '📋 Copied!';
     });
   }
+
+  //function for pizza animation
   function updatePizza() {
     pizzaImage = document.getElementById('pizza');
     if (pizzaImage.src.includes('pizza1.jpg')) {
@@ -53,5 +69,6 @@
     }
   }
 
+  //calling animation
   setInterval(updatePizza, 1000);
 </script>
