Centered the voted state message and made the pie chart responsive, allowing a full view on a normal sized screen

--- a/views/partials/participants.ejs
+++ b/views/partials/participants.ejs
@@ -21,6 +21,8 @@
     <img src="/images/site/user.png" alt="user-icon" />
     <p>${name}</p>
     ${
+
+    // Switch statements?
       status === 'waiting'
         ? `<p class='${name.replace(/ /g, '')} waiting'>🍕</p>`
         : status === 'voting'
