--- a/views/partials/voted.ejs
+++ b/views/partials/voted.ejs
@@ -1,5 +1,5 @@
 <section id="voted-section" class="hidden">
-    <h2>All votes are in for an average of: <span id="average-vote"></span></h2>
+    <h2 id="votedMessage">All votes are in for an average of: <span id="average-vote"></span></h2>
 
     <div id="pieChart">
         <canvas id="myChart"></canvas>
