--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <h2 class="h1">Estimate Together. Build Better.</h2>
     <p class="m-1">Join your team in a focused estimation session where every voice counts.</p>
     <p class="m-1">Collaboratively vote on story effort, align expectations, and drive your Sprint planning with confidence.</p>
-    <form action="/dashboard/" method="POST">
+    <!-- <form action="/dashboard/" method="POST">
         <button type="submit" class="btn btn-secondary btn-lg mt-4">Create a Room</button>
-    </form>
+    </form> -->
     
 </div>
