Added a button for a user to pass on voting, if desired. Also updated CSS to have all buttons in a single row.

--- a/public/css/room-styles.css
+++ b/public/css/room-styles.css
@@ -14,6 +14,14 @@
   grid-template-columns: 2fr 15fr 2fr;
 }
 
+.button-group {
+  display: flex;
+
+  div {
+    margin: auto;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .room {
     display: grid;
