--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -23,6 +23,7 @@
     />
   </div>
   <% if (isOwner) { %>
+  <div class="button-group">
   <div class="owner-button">
     <button
       id="start-estimating"
@@ -31,6 +32,7 @@
     >
       Start Estimating
     </button>
+  </div>
   </div>
   <% } %>
 </section>
