--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head') %>
-<body class="bg-light d-flex flex-column min-vh-100">
+<body class="bg-dark d-flex flex-column min-vh-100">
     <%- include('../partials/header') %>
     <main class="container my-4 flex-grow-1">
         <%- body %>
     </main>
     <%- include('../partials/footer') %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script>
+      function setTheme() {
+        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const body = document.querySelector('body');
+
+        if (prefersDark) {
+          body.classList.remove('bg-light');
+          body.classList.add('bg-dark');
+        } else {
+          body.classList.remove('bg-dark');
+          body.classList.add('bg-light');
+        }
+      }
+      setTheme();
+    </script>
 </body>
 </html>
+
